cracion de la pagina web estatica que lleva la documentacion del servidor

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sistema institucional</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="favicon.png">
+    <meta name="description" content="Servidor GraphQL desarrollado en el lenguaje de programación golang con autenticación de jwt, que podrá ser consumido con cualquier cliente graphql (web, escritorio, móvil, etc.)">
 </head>
 <body>
     <div class="layout-container">
         <header class="header"></header>
         <main class="main">
-            <h1>Template</h1>
+            <div class="main__header">
+                <div class="main__header__background">
+                    <img src="graph-wash.png" alt="graph-ql">
+                </div>
+                <div class="main__header__content">
+                    <article>
+                        <h1>Sistema Institucional</h1>
+                        <p>Servidor GraphQL desarrollado en el lenguaje de programación golang con autenticación de jwt, que podrá ser consumido con cualquier cliente graphql (web, escritorio, móvil, etc.)</p>
+                        <div class="btn-group">
+                            <a href="https://github.com/paulantezana/institutional" target="_blank" class="btn btn-white">github</a>
+                            <div class="server-link"><code>http://localhost:7070/graphql</code></div>
+                            <a href="http://localhost:7070/graphiql" class="btn btn-purple">graphiql</a>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </main>
         <footer class="footer"></footer>
     </div>
