--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="main__header__content">
                     <article>
-                        <h1>Sistema Institucional</h1>
+                        <h1>Servidor GraphQL</h1>
                         <p>Servidor GraphQL desarrollado en el lenguaje de programación golang con autenticación de jwt, que podrá ser consumido con cualquier cliente graphql (web, escritorio, móvil, etc.)</p>
                         <div class="btn-group">
                             <a href="https://github.com/paulantezana/institutional" target="_blank" class="btn btn-white">github</a>
