integracion a los usuarios recuperacion de contraseña mediante el correo electronico del usuario quin lo solicito

--- a/public/mail.html
+++ b/public/mail.html
@@ -8,7 +8,25 @@
     <title>Send Email</title>
 </head>
 <body>
-    <h1>Enviado desde go </h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto asperiores aut commodi ducimus, eum excepturi, explicabo fuga magnam mollitia nemo nulla, officia perferendis porro quas rem tenetur voluptates voluptatibus.</p>
+    <div style="text-align: center; font-family: sans-serif">
+        <header style="background: #0080DB; color: white; text-align: center; padding-top: 8rem; padding-bottom: 8rem">
+            <div class="header-content .container">
+                <h1 style="font-size: 4rem; margin: 0">FROM GO</h1>
+                <di>paul antezana message sent from go</di>
+            </div>
+        </header>
+        <main style="color: #616161; line-height: 1.5em; padding-top: 1rem; padding-bottom: 1rem">
+            <div style="max-width: 700px; margin-right: auto; margin-left: auto">
+                <p>Esta plantilla de correo electrónico es solo una prueba que se utiliza durante el desarrollo de nuestro software en paulantezana.com</p>
+                <p>https://institutional/recover/{{.ClaveRecuperar}}</p>
+                <a href="https://institutional/recover/{{.ClaveRecuperar}}" style="display: inline-block; padding: 0.5rem 2rem; color: white; background: #37A665; text-decoration: none; border-radius: 5px">Recover</a>
+            </div>
+        </main>
+        <footer style="color: #616161; padding-top: 3rem; padding-bottom: 3rem">
+            <div class="container">
+                <p>yoel.antezana@gmail.com</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
