--- a/public/mail.html
+++ b/public/mail.html
@@ -8,7 +8,7 @@
     <title>Send Email</title>
 </head>
 <body>
-    <div style="text-align: center; font-family: sans-serif">
+    <div style="font-family: sans-serif !important;">
         <header style="background: #0080DB; color: white; text-align: center; padding-top: 8rem; padding-bottom: 8rem">
             <div class="header-content .container">
                 <h1 style="font-size: 4rem; margin: 0">FROM GO</h1>
@@ -17,12 +17,13 @@
         </header>
         <main style="color: #616161; line-height: 1.5em; padding-top: 1rem; padding-bottom: 1rem">
             <div style="max-width: 700px; margin-right: auto; margin-left: auto">
-                <p>Esta plantilla de correo electrónico es solo una prueba que se utiliza durante el desarrollo de nuestro software en paulantezana.com</p>
-                <p>https://institutional/recover/{{.ClaveRecuperar}}</p>
-                <a href="https://institutional/recover/{{.ClaveRecuperar}}" style="display: inline-block; padding: 0.5rem 2rem; color: white; background: #37A665; text-decoration: none; border-radius: 5px">Recover</a>
+                <p>Hola {{.Usuario}}</p>
+                <p>Recibimos una solicitud para restablecer tu contraseña de SINST</p>
+                <p>Ingresar este código en el sistema para restablecer la contraseña</p>
+                <pre style="padding: 10px; background-color: #f2f2f2; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; border: 1px solid #ddd; font-size: 1.3rem;"><code>{{.ClaveRecuperar}}</code></pre>
             </div>
         </main>
-        <footer style="color: #616161; padding-top: 3rem; padding-bottom: 3rem">
+        <footer style="text-align: center; color: #616161; padding-top: 3rem; padding-bottom: 3rem">
             <div class="container">
                 <p>yoel.antezana@gmail.com</p>
             </div>
